# MirageWallpaper

./: .gitignore  README.md  README_EN.md  appcast-arm64.xml  appcast-x86_64.xml  pr-rainmeter-widget.md
MirageQt/: CMakeLists.txt  README.md
MirageQt/Resources/: mirageqt.desktop.in
MirageQt/Sources/App/: MirageStyle.cpp  MirageStyle.h  main.cpp
MirageQt/Sources/ContentView/: ContentView.cpp  ContentView.h  FirstLaunchView.cpp  FirstLaunchView.h  ImportPanels.cpp  ImportPanels.h  MainWindow.cpp  MainWindow.h
MirageQt/Sources/ContentView/Components/: ExplorerBottomBarWidget.cpp  ExplorerBottomBarWidget.h  ExplorerTopBarWidget.cpp  ExplorerTopBarWidget.h  FilterResultsWidget.cpp  FilterResultsWidget.h  ProjectFeedbackBannerWidget.cpp  ProjectFeedbackBannerWidget.h  PropertyEditorWidget.cpp  PropertyEditorWidget.h  TopTabBarWidget.cpp  TopTabBarWidget.h  WallpaperListWidget.cpp  WallpaperListWidget.h  WallpaperPreviewWidget.cpp  WallpaperPreviewWidget.h  WorkshopWidget.cpp  WorkshopWidget.h
MirageQt/Sources/ContentView/Components/Discover/: DiscoverBannerView.cpp  DiscoverBannerView.h  DiscoverSectionView.cpp  DiscoverSectionView.h  DiscoverView.cpp  DiscoverView.h
MirageQt/Sources/ContentView/Components/Workshop/: DownloadPopover.cpp  DownloadPopover.h  WorkshopFilterSidebar.cpp  WorkshopFilterSidebar.h  WorkshopItemCard.cpp  WorkshopItemCard.h  WorkshopItemDetail.cpp  WorkshopItemDetail.h  WorkshopSearchBar.cpp  WorkshopSearchBar.h  WorkshopTagBar.cpp  WorkshopTagBar.h  WorkshopView.cpp  WorkshopView.h
MirageQt/Sources/Renderers/Common/: ControlReader.cpp  ControlReader.h  DesktopWindowX11.cpp  DesktopWindowX11.h
MirageQt/Sources/Renderers/VideoWallpaperQt/: VideoWallpaperMain.cpp  VideoWallpaperWindow.cpp  VideoWallpaperWindow.h
MirageQt/Sources/Renderers/WebWallpaperQt/: WEUrlSchemeHandler.cpp  WEUrlSchemeHandler.h  WebWallpaperMain.cpp  WebWallpaperWindow.cpp  WebWallpaperWindow.h
MirageQt/Sources/Services/: FavoritesManager.cpp  FavoritesManager.h  GlobalSettingsService.cpp  GlobalSettingsService.h  LinuxSystemIntegration.cpp  LinuxSystemIntegration.h  Paths.cpp  Paths.h  RendererController.cpp  RendererController.h  SteamCMDManager.cpp  SteamCMDManager.h  SteamWebAPI.cpp  SteamWebAPI.h  ThumbnailGenerator.cpp  ThumbnailGenerator.h  WEProject.cpp  WEProject.h  WallpaperLibrary.cpp  WallpaperLibrary.h  WorkshopModels.cpp  WorkshopModels.h  WorkshopViewModel.cpp  WorkshopViewModel.h
MirageQt/Sources/SettingsView/: AboutUsView.cpp  AboutUsView.h  GeneralPage.cpp  GeneralPage.h  PerformancePage.cpp  PerformancePage.h  PluginsPage.cpp  PluginsPage.h  ScreenSaverPage.cpp  ScreenSaverPage.h  SettingsView.cpp  SettingsView.h  SettingsWidget.cpp  SettingsWidget.h
MirageQt/Sources/SteamSetup/: SteamSetupDialog.cpp  SteamSetupDialog.h
RmskinRenderer/: CMakeLists.txt  CMakePresets.json
RmskinRenderer/Sources/RmskinRenderer/: CMakeLists.txt  RMBangs.h  RMBangs.mm  RMConfigParser.h  RMConfigParser.mm  RMFontManager.h  RMFontManager.mm  RMIniFile.h  RMIniFile.mm  RMLayout.h  RMLayout.mm  RMLog.h  RMMathParser.h  RMMathParser.mm  RMMeasure.h  RMMeasure.mm  RMMeter.h  RMMeter.mm  RMSkin.h  RMSkin.mm  RMSkinView.h  RMSkinView.mm
RmskinRenderer/Tools/RmskinViewer/: CMakeLists.txt  RmskinViewer.mm
RmskinRenderer/Tools/RmskinWallpaper/: CMakeLists.txt  ControlChannel.h  ControlChannel.m  RmskinWallpaper.mm
RmskinRenderer/scripts/: build.sh
SceneRenderer/: .gitignore  CMakeLists.txt  CMakePresets.json
SceneRenderer/Sources/SceneRenderer/: CMakeLists.txt
SceneRenderer/Sources/SceneRenderer/AppRuntime/Controller/: SceneUniformBinder.cpp  SceneUniformBinder.cppm  WallpaperEngineRuntime.cpp  WallpaperEngineRuntime.cppm
SceneRenderer/Sources/SceneRenderer/AppRuntime/Messaging/: DispatchLoop.cppm
SceneRenderer/Sources/SceneRenderer/AppRuntime/Scripting/: ScriptRuntime.cpp  ScriptRuntime.cppm
SceneRenderer/Sources/SceneRenderer/AppRuntime/Text/: TextRasterizer.cpp  TextRasterizer.cppm
SceneRenderer/Sources/SceneRenderer/AppRuntime/Timing/: ClockModule.cppm  FrameClock.cpp  FrameClock.cppm  WorkerTimer.cpp  WorkerTimer.cppm
SceneRenderer/Sources/SceneRenderer/Assembly/: CMakeLists.txt
SceneRenderer/Sources/SceneRenderer/Domain/Particles/: ParticleEmitter.cpp  ParticleModify.cpp  ParticleSystem.cpp  WallpaperParticleGeometry.cpp
SceneRenderer/Sources/SceneRenderer/Domain/Scene/: CameraRig.cpp  IndexBuffer.cpp  LayerEffectStack.cpp  Node.cpp  ShaderModel.cpp  VertexBuffer.cpp  Visibility.cppm  World.cpp  World.cppm
SceneRenderer/Sources/SceneRenderer/Domain/Semantics/: SemanticTextures.cppm
SceneRenderer/Sources/SceneRenderer/Frame/Graph/: FlowGraph.cpp  (+8 more)
SceneRenderer/Sources/SceneRenderer/Host/: DesktopHost.h
SceneRenderer/Sources/SceneRenderer/Kernel/: CMakeLists.txt  Core.cppm  Fs.cppm  Json.cpp  Json.cppm  UserProperty.cpp  eigen.cppm  nlohmann_json.cppm
SceneRenderer/Sources/SceneRenderer/Wallpaper/: WallpaperModule.cppm
SceneRenderer/Tools/SceneScreenSaver/: CMakeLists.txt  SceneScreenSaverEngine.cpp  SceneScreenSaverHost.mm
SceneRenderer/Tools/SceneViewer/: Arg.cppm  CMakeLists.txt  Common.cpp  Common.cppm  PreviewApp.cpp
SceneRenderer/Tools/SceneWallpaper/: CMakeLists.txt  ControlChannel.cpp  ControlChannel.h  WallpaperApp.cpp  WallpaperApp_win32.cpp
SceneRenderer/docs/: linux-x11-wallpaper.md
SceneRenderer/scripts/: build.sh
SceneRenderer/windows/: CMakeLists.txt  CMakePresets.json  vcpkg.json
SceneRenderer/windows/cmake/: EngineTargets.cmake
VideoRenderer/: CMakeLists.txt
VideoRenderer/Sources/VideoRenderer/: VRMemoryAssetLoader.h  VRMemoryAssetLoader.mm  VideoRendererEngine.h  VideoRendererEngine.mm
VideoRenderer/Tools/VideoWallpaper/: CMakeLists.txt  ControlChannel.h  ControlChannel.m  VideoWallpaper.mm
WebRenderer/: CMakeLists.txt
WebRenderer/Sources/WebRenderer/: WRDesktopInputForwarder.h  WRDesktopInputForwarder.mm  WRURLSchemeHandler.h  WRURLSchemeHandler.mm  WebRendererEngine.h  WebRendererEngine.mm
WebRenderer/Tools/WebWallpaper/: CMakeLists.txt  ControlChannel.h  ControlChannel.m  WebWallpaper.mm
(+274 files in other folders)
